Revision history for {{$dist->name}}

{{$NEXT}}

2.01      2022-08-30 15:37:22 -0600
  - Documentation fixes (gh#373)

2.00      2022-08-12 13:58:51 -0600
  - Production release identical to 1.91_01

1.91_01   2022-07-05 07:41:07 -0400
  - Setting the env environment V variable to a true value now will override the
    verbose option on FFI::Build.  This allows modules that use it to display verbose
    output without having to change the .fbx files.  This mirrors the behavior of
    how FFI-Platypus itself works. (gh#369)

1.90_02   2022-06-27 08:33:31 -0600
  - Documentation updates for API = 2 (gh#340, gh#368)

1.90_01   2022-06-24 11:03:35 -0500
  - api = 2 is no longer experimental (gh#365)

1.61_01   2022-06-23 16:16:43 -0500
  - Added experimental modules FFI::Build::Plugin and FFI::Build::PluginData (gh#351)

1.60_01   2022-06-23 15:49:42 -0500
  - Updated installer

1.59_01   2022-06-19 07:47:49 -0600
  - Internal refactor (gh#361)

1.58      2022-06-19 06:19:42 -0600
  - TypeParser version 2 accept string(10) as alias for string(10)* (gh#346, gh#359)

1.57      2022-06-15 18:30:29 -0600
  - Documentation improvements

1.56      2021-10-27 19:44:37 -0600
  - Fixes for very old versions of Mac OS X / Xcode (gh#350)
  - Added cxxld method to FFI::Build::Platform (gh#350)

1.55      2021-07-29 10:41:02 -0600
  - Production release identical to 1.54_01

1.54_01   2021-07-12 17:05:37 -0600
  - FFI::Temp will retry up to 10 times to avoid a race (gh#344, gh#348)

1.53      2021-07-12 12:18:27 -0600
  - Documentation improvements (gh#307, gh#347)

1.52      2021-07-01 07:33:44 -0600
  - Probe for intmax_t uintmax_t types (gh#341)

1.51      2021-07-01 07:25:38 -0600
  - Fix testing bug that was failing on systems with libffi that does
    not support variadic functions (ppisar++ gh#323, gh#343, gh#345)

1.50      2021-06-30 08:34:17 -0600
  - Production release identical to 1.49_01

1.49_01   2021-06-22 17:07:44 -0600